[package]
name = "show-me-logs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
reqwest = "0.12.24"
serde = {version = "1.0.228", features = ["default", "derive", ]}
serde_json = {version = "1.0.145", features = ["default"]  }
chrono = {features = ["default", "serde"], version = "0.4.42"}
actix-cors = "0.7.1"
openssl = {version = "0.10.74", features = ["vendored"]}
thiserror = "2.0.17"
jsonwebkey = {version = "0.3.5", features = ["jsonwebtoken", "jwt-convert", "generate"]}
jsonwebtoken = { version = "8.3.0"   }
actix-ws = "0.3.0"
futures-util = "0.3.31"
